<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/white">

	<androidx.cardview.widget.CardView
		style="@style/CardViewBackground"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_margin="10dp"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textNameAudio"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:text="@string/textNameAudio"
				android:textColor="@color/black"
				android:textSize="18sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/textDataAudio"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/textData"
				android:textColor="@color/black"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center|end"
			android:layout_marginEnd="10dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textTimeActual"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:text="@string/textTimeActual"
				android:textColor="@color/black"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/textSlash"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginHorizontal="2dp"
				android:layout_weight="1"
				android:text="@string/textSlash"
				android:textColor="@color/black"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/textTime"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginEnd="15dp"
				android:layout_weight="1"
				android:text="@string/textTime"
				android:textColor="@color/black"
				android:textSize="14sp" />

			<ToggleButton
				android:id="@+id/buttonPlayPause"
				style="@style/IconPlayPauseToggleButton"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_gravity="center|end"
				android:layout_margin="5dp"/>
		</LinearLayout>

		<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="3dp"
			android:layout_gravity="bottom"
			android:progressDrawable="@drawable/ic_progress_bar"/>

	</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>